// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render with default styles 1`] = `
.circuit-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-align: flex-start;
  -ms-flex-align: flex-start;
  flex-align: flex-start;
  margin-bottom: 16px;
}

.circuit-4 {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  background-color: #D8DDE1;
  border-radius: 24px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
  height: 24px;
  width: 40px;
  overflow: visible;
}

.circuit-4::-moz-focus-inner {
  border-radius: 24px;
}

.circuit-0 {
  display: block;
  background-color: #FAFBFC;
  box-shadow: 0 2px 0 0 #9DA7B1;
  position: absolute;
  top: 50%;
  -webkit-transform: translate3d(4px,-50%,0);
  -ms-transform: translate3d(4px,-50%,0);
  transform: translate3d(4px,-50%,0);
  -webkit-transition: box-shadow 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  height: 16px;
  width: 16px;
  border-radius: 16px;
}

.circuit-2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  className="circuit-6 circuit-7"
>
  <button
    aria-checked={false}
    className="circuit-4 circuit-5"
    role="switch"
    type="button"
  >
    <span
      className="circuit-0 circuit-1"
    />
    <span
      className="circuit-2 circuit-3"
    >
      off
    </span>
  </button>
</div>
`;

exports[`Toggle should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-4 {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  background-color: #D8DDE1;
  border-radius: 24px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
  height: 24px;
  width: 40px;
  overflow: visible;
}

.circuit-4::-moz-focus-inner {
  border-radius: 24px;
}

.circuit-0 {
  display: block;
  background-color: #FAFBFC;
  box-shadow: 0 2px 0 0 #9DA7B1;
  position: absolute;
  top: 50%;
  -webkit-transform: translate3d(4px,-50%,0);
  -ms-transform: translate3d(4px,-50%,0);
  transform: translate3d(4px,-50%,0);
  -webkit-transition: box-shadow 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out,transform 200ms ease-in-out;
  height: 16px;
  width: 16px;
  border-radius: 16px;
}

.circuit-2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-align: flex-start;
  -ms-flex-align: flex-start;
  flex-align: flex-start;
  margin-bottom: 16px;
  margin-bottom: 0;
}

<div
  className="circuit-6 circuit-7"
>
  <button
    aria-checked={false}
    className="circuit-4 circuit-5"
    role="switch"
    type="button"
  >
    <span
      className="circuit-0 circuit-1"
    />
    <span
      className="circuit-2 circuit-3"
    >
      off
    </span>
  </button>
</div>
`;
